* Non standard toolbar button sizes are now suported.
* Text on toolbar buttons is now supported.
* Simplified the setting of Toolbar resource IDs. They are now set in the 
  Mainframe's constructor by adding to a vector.
* There is now a clear seperation between the Resource IDs defined by Win32++
  and those defined in the user's application. Resource IDs defined by Win32++
  are defined as IDW_XXXXXX, and begin from 0xE800. This is intended to avoid 
  clashes with user defined resource IDs.

The following changes have been made to the Win32++ code:
Added CWnd::OnNotifyReflect
Added CWnd::Attach
Added CWnd::AttachDlgItem
Added CWnd::CallPrevWindow
Added CWnd::Detach
Added CRebar::ResizeBand
Added CStatusbar::CreatePanes
Added CStatusbar::GetPaneText
Added CStatusbar::SetPaneText
Added CStatusbar::SetPaneWidth
Added CToolbar::AddBitmap
Added CToolbar::GetButtonState
Added CToolbar::GetButtonStyle
Added CToolbar::GetItemRect
Added CToolbar::HitTest
Added CToolbar::SetButtons
Added CToolbar::SetButtonState
Added CToolbar::SetButtonStyle
Added CToolbar::SetButtonText
Added CToolbar::SetImageList
Added CToolbar::SetSizes
Added CFrame::GetRebar
Added CFrame::GetStatusbar
Added CFrame::GetToolbar
Added CFrame::SetStatusIndicators
Added CFrame::ToolbarNotify
Added CFrame:: UseStatusIndicators
Added CMDIFrame::GetMDIClient
Added CMDIFrame::GetActiveChild
Removed CFrame::SetToolbarData
Removed CFrame::OnFrameCreated.  Use CFrame::OnInitialUpdate instead.
Removed CSplitter::OnNotify
CFrame::AddMenubarBand modified to CFrame::AddMenubarBand(int nHeight)
CFrame::AddToolbarBand modified to CFrame::AddToolbarBand(int nHeight)
CToolbar::SetButtons modified to CToolbar::SetButtons(vector<UINT> ToolbarData)
CWnd::OnNotify modified, it now returns a LRESULT

Bug Fixes
* CFrame::OnHelp now returns the focus back to the window that had it before 
  OnHelp was called.
* CSplitter:: Fixed drawing of splitter bar

Incompatibilites with previous version