@@ -3,6 +3,7 @@ Released: 28th February, 2007 by:
 
      David Nash
      email: dnash@bigpond.net.au
+     url: http://users.bigpond.net.au/programming/
 
 
 Copyright (c) 2005, 2006  David Nash
